hertzbeat-alerter/src/main/java/org/apache/hertzbeat/alert/expr/sql/SqlExpressionParser.java
package org.apache.hertzbeat.alert.expr.sql;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SqlExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, OR=2, NOT=3, SELECT=4, FROM=5, WHERE=6, GROUP=7, BY=8, HAVING=9, 
		ORDER=10, LIMIT=11, OFFSET=12, AS=13, ASC=14, DESC=15, IN=16, IS=17, NULL=18, 
		LIKE=19, BETWEEN=20, STAR=21, COUNT=22, SUM=23, AVG=24, MIN=25, MAX=26, 
		SQL_FUNCTION=27, GT=28, GE=29, LT=30, LE=31, EQ=32, NE=33, LPAREN=34, 
		RPAREN=35, LBRACKET=36, RBRACKET=37, COMMA=38, DOT=39, SEMICOLON=40, FLOAT=41, 
		NUMBER=42, STRING=43, IDENTIFIER=44, WS=45, LINE_COMMENT=46, BLOCK_COMMENT=47;
	public static final int
		RULE_expression = 0, RULE_sqlExpr = 1, RULE_selectSql = 2, RULE_selectFieldList = 3, 
		RULE_selectField = 4, RULE_relList = 5, RULE_relation = 6, RULE_conditionList = 7, 
		RULE_compOp = 8, RULE_condition = 9, RULE_conditionUnit = 10, RULE_functionCall = 11, 
		RULE_functionName = 12, RULE_parameterList = 13, RULE_parameter = 14, 
		RULE_groupByList = 15, RULE_orderByList = 16, RULE_orderByField = 17, 
		RULE_limitClause = 18, RULE_number = 19, RULE_string = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"expression", "sqlExpr", "selectSql", "selectFieldList", "selectField", 
			"relList", "relation", "conditionList", "compOp", "condition", "conditionUnit", 
			"functionCall", "functionName", "parameterList", "parameter", "groupByList", 
			"orderByList", "orderByField", "limitClause", "number", "string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'*'", null, null, 
			null, null, null, null, "'>'", "'>='", "'<'", "'<='", null, "'!='", "'('", 
			"')'", "'['", "']'", "','", "'.'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "OR", "NOT", "SELECT", "FROM", "WHERE", "GROUP", "BY", "HAVING", 
			"ORDER", "LIMIT", "OFFSET", "AS", "ASC", "DESC", "IN", "IS", "NULL", 
			"LIKE", "BETWEEN", "STAR", "COUNT", "SUM", "AVG", "MIN", "MAX", "SQL_FUNCTION", 
			"GT", "GE", "LT", "LE", "EQ", "NE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
			"COMMA", "DOT", "SEMICOLON", "FLOAT", "NUMBER", "STRING", "IDENTIFIER", 
			"WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SqlExpression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SqlExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public SqlExprContext sqlExpr() {
			return getRuleContext(SqlExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SqlExpressionParser.EOF, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlExpressionVisitor ) return ((SqlExpressionVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			sqlExpr();
			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlExprContext extends ParserRuleContext {
		public SqlExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlExpr; }
	 
		public SqlExprContext() { }
		public void copyFrom(SqlExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SelectSqlCallExprContext extends SqlExprContext {
		public TerminalNode SQL_FUNCTION() { return getToken(SqlExpressionParser.SQL_FUNCTION, 0); }
		public TerminalNode LPAREN() { return getToken(SqlExpressionParser.LPAREN, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SqlExpressionParser.RPAREN, 0); }
		public SelectSqlCallExprContext(SqlExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).enterSelectSqlCallExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).exitSelectSqlCallExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlExpressionVisitor ) return ((SqlExpressionVisitor<? extends T>)visitor).visitSelectSqlCallExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SelectSqlExprContext extends SqlExprContext {
		public SelectSqlContext selectSql() {
			return getRuleContext(SelectSqlContext.class,0);
		}
		public SelectSqlExprContext(SqlExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).enterSelectSqlExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).exitSelectSqlExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlExpressionVisitor ) return ((SqlExpressionVisitor<? extends T>)visitor).visitSelectSqlExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlExprContext sqlExpr() throws RecognitionException {
		SqlExprContext _localctx = new SqlExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sqlExpr);
		try {
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECT:
				_localctx = new SelectSqlExprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				selectSql();
				}
				break;
			case SQL_FUNCTION:
				_localctx = new SelectSqlCallExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				match(SQL_FUNCTION);
				setState(47);
				match(LPAREN);
				setState(48);
				string();
				setState(49);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectSqlContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(SqlExpressionParser.SELECT, 0); }
		public SelectFieldListContext selectFieldList() {
			return getRuleContext(SelectFieldListContext.class,0);
		}
		public TerminalNode FROM() { return getToken(SqlExpressionParser.FROM, 0); }
		public RelListContext relList() {
			return getRuleContext(RelListContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(SqlExpressionParser.WHERE, 0); }
		public List<ConditionListContext> conditionList() {
			return getRuleContexts(ConditionListContext.class);
		}
		public ConditionListContext conditionList(int i) {
			return getRuleContext(ConditionListContext.class,i);
		}
		public TerminalNode GROUP() { return getToken(SqlExpressionParser.GROUP, 0); }
		public List<TerminalNode> BY() { return getTokens(SqlExpressionParser.BY); }
		public TerminalNode BY(int i) {
			return getToken(SqlExpressionParser.BY, i);
		}
		public GroupByListContext groupByList() {
			return getRuleContext(GroupByListContext.class,0);
		}
		public TerminalNode HAVING() { return getToken(SqlExpressionParser.HAVING, 0); }
		public TerminalNode ORDER() { return getToken(SqlExpressionParser.ORDER, 0); }
		public OrderByListContext orderByList() {
			return getRuleContext(OrderByListContext.class,0);
		}
		public TerminalNode LIMIT() { return getToken(SqlExpressionParser.LIMIT, 0); }
		public LimitClauseContext limitClause() {
			return getRuleContext(LimitClauseContext.class,0);
		}
		public SelectSqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectSql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).enterSelectSql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).exitSelectSql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlExpressionVisitor ) return ((SqlExpressionVisitor<? extends T>)visitor).visitSelectSql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectSqlContext selectSql() throws RecognitionException {
		SelectSqlContext _localctx = new SelectSqlContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_selectSql);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(SELECT);
			setState(54);
			selectFieldList();
			setState(55);
			match(FROM);
			setState(56);
			relList();
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(57);
				match(WHERE);
				setState(58);
				conditionList(0);
				}
			}

			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(61);
				match(GROUP);
				setState(62);
				match(BY);
				setState(63);
				groupByList();
				}
			}

			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HAVING) {
				{
				setState(66);
				match(HAVING);
				setState(67);
				conditionList(0);
				}
			}

			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(70);
				match(ORDER);
				setState(71);
				match(BY);
				setState(72);
				orderByList();
				}
			}

			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(75);
				match(LIMIT);
				setState(76);
				limitClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectFieldListContext extends ParserRuleContext {
		public List<SelectFieldContext> selectField() {
			return getRuleContexts(SelectFieldContext.class);
		}
		public SelectFieldContext selectField(int i) {
			return getRuleContext(SelectFieldContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SqlExpressionParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SqlExpressionParser.COMMA, i);
		}
		public SelectFieldListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectFieldList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).enterSelectFieldList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).exitSelectFieldList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlExpressionVisitor ) return ((SqlExpressionVisitor<? extends T>)visitor).visitSelectFieldList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectFieldListContext selectFieldList() throws RecognitionException {
		SelectFieldListContext _localctx = new SelectFieldListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selectFieldList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			selectField();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(80);
				match(COMMA);
				setState(81);
				selectField();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectFieldContext extends ParserRuleContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(SqlExpressionParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(SqlExpressionParser.IDENTIFIER, i);
		}
		public TerminalNode AS() { return getToken(SqlExpressionParser.AS, 0); }
		public TerminalNode STAR() { return getToken(SqlExpressionParser.STAR, 0); }
		public TerminalNode DOT() { return getToken(SqlExpressionParser.DOT, 0); }
		public SelectFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).enterSelectField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).exitSelectField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlExpressionVisitor ) return ((SqlExpressionVisitor<? extends T>)visitor).visitSelectField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectFieldContext selectField() throws RecognitionException {
		SelectFieldContext _localctx = new SelectFieldContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_selectField);
		int _la;
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				functionCall();
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS || _la==IDENTIFIER) {
					{
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AS) {
						{
						setState(88);
						match(AS);
						}
					}

					setState(91);
					match(IDENTIFIER);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(IDENTIFIER);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS || _la==IDENTIFIER) {
					{
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AS) {
						{
						setState(95);
						match(AS);
						}
					}

					setState(98);
					match(IDENTIFIER);
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				match(STAR);
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS || _la==IDENTIFIER) {
					{
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AS) {
						{
						setState(102);
						match(AS);
						}
					}

					setState(105);
					match(IDENTIFIER);
					}
				}

				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(108);
				match(IDENTIFIER);
				setState(109);
				match(DOT);
				setState(110);
				match(IDENTIFIER);
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS || _la==IDENTIFIER) {
					{
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AS) {
						{
						setState(111);
						match(AS);
						}
					}

					setState(114);
					match(IDENTIFIER);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelListContext extends ParserRuleContext {
		public List<RelationContext> relation() {
			return getRuleContexts(RelationContext.class);
		}
		public RelationContext relation(int i) {
			return getRuleContext(RelationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SqlExpressionParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SqlExpressionParser.COMMA, i);
		}
		public RelListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).enterRelList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).exitRelList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlExpressionVisitor ) return ((SqlExpressionVisitor<? extends T>)visitor).visitRelList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelListContext relList() throws RecognitionException {
		RelListContext _localctx = new RelListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_relList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			relation();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(120);
				match(COMMA);
				setState(121);
				relation();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(SqlExpressionParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(SqlExpressionParser.IDENTIFIER, i);
		}
		public TerminalNode AS() { return getToken(SqlExpressionParser.AS, 0); }
		public TerminalNode LPAREN() { return getToken(SqlExpressionParser.LPAREN, 0); }
		public SelectSqlContext selectSql() {
			return getRuleContext(SelectSqlContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SqlExpressionParser.RPAREN, 0); }
		public RelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).enterRelation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).exitRelation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlExpressionVisitor ) return ((SqlExpressionVisitor<? extends T>)visitor).visitRelation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationContext relation() throws RecognitionException {
		RelationContext _localctx = new RelationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_relation);
		int _la;
		try {
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				match(IDENTIFIER);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS || _la==IDENTIFIER) {
					{
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AS) {
						{
						setState(128);
						match(AS);
						}
					}

					setState(131);
					match(IDENTIFIER);
					}
				}

				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(LPAREN);
				setState(135);
				selectSql();
				setState(136);
				match(RPAREN);
				setState(137);
				match(AS);
				setState(138);
				match(IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionListContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(SqlExpressionParser.LPAREN, 0); }
		public List<ConditionListContext> conditionList() {
			return getRuleContexts(ConditionListContext.class);
		}
		public ConditionListContext conditionList(int i) {
			return getRuleContext(ConditionListContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(SqlExpressionParser.RPAREN, 0); }
		public TerminalNode AND() { return getToken(SqlExpressionParser.AND, 0); }
		public TerminalNode OR() { return getToken(SqlExpressionParser.OR, 0); }
		public ConditionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).enterConditionList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlExpressionListener ) ((SqlExpressionListener)listener).exitConditionList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlExpressionVisitor ) return ((SqlExpressionVisitor<? extends T>)visitor).visitConditionList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionListContext conditionList() throws RecognitionException {
		return conditionList(0);
	}
